// Vitest Snapshot v1

exports[`external ftl file support mode:development > works with vue 2 1`] = `
"

const _missingExportShim = void 0;
const da_ftl = new _missingExportShim(\\"\\");
const en_ftl = new _missingExportShim(\\"# Simple things are simple.\\\\nhello-user = Hello, {$userName}!\\\\n\\\\n# Complex things are possible.\\\\nshared-photos =\\\\n  {$userName} {$photoCount ->\\\\n     [one] added one photo\\\\n    *[other] added {$photoCount} new photos\\\\n  } to {$userGender ->\\\\n     [male] his stream\\\\n     [female] her stream\\\\n    *[other] their stream\\\\n  }.\\\\n\\");
var render = function() {
  var _vm = this;
  var _h = _vm.$createElement;
  var _c = _vm._self._c || _h;
  return _c(\\"div\\", [_c(\\"div\\", [_vm._v(_vm._s(_vm.$t(\\"hello-user\\", {
    userName: _vm.userName
  })))]), _c(\\"div\\", [_vm._v(_vm._s(_vm.$t(\\"shared-photos\\", {
    userName: _vm.userName,
    photoCount: _vm.photoCount,
    userGender: _vm.userGender
  })))])]);
};
var staticRenderFns = [];
render._withStripped = true;
function normalizeComponent(scriptExports, render2, staticRenderFns2, functionalTemplate, injectStyles, scopeId, moduleIdentifier, shadowMode) {
  var options = typeof scriptExports === \\"function\\" ? scriptExports.options : scriptExports;
  if (render2) {
    options.render = render2;
    options.staticRenderFns = staticRenderFns2;
    options._compiled = true;
  }
  if (functionalTemplate) {
    options.functional = true;
  }
  if (scopeId) {
    options._scopeId = \\"data-v-\\" + scopeId;
  }
  var hook;
  if (moduleIdentifier) {
    hook = function(context) {
      context = context || this.$vnode && this.$vnode.ssrContext || this.parent && this.parent.$vnode && this.parent.$vnode.ssrContext;
      if (!context && typeof __VUE_SSR_CONTEXT__ !== \\"undefined\\") {
        context = __VUE_SSR_CONTEXT__;
      }
      if (injectStyles) {
        injectStyles.call(this, context);
      }
      if (context && context._registeredComponents) {
        context._registeredComponents.add(moduleIdentifier);
      }
    };
    options._ssrRegister = hook;
  } else if (injectStyles) {
    hook = shadowMode ? function() {
      injectStyles.call(this, (options.functional ? this.parent : this).$root.$options.shadowRoot);
    } : injectStyles;
  }
  if (hook) {
    if (options.functional) {
      options._injectStyles = hook;
      var originalRender = options.render;
      options.render = function renderWithStyleInjection(h, context) {
        hook.call(context);
        return originalRender(h, context);
      };
    } else {
      var existing = options.beforeCreate;
      options.beforeCreate = existing ? [].concat(existing, hook) : [hook];
    }
  }
  return {
    exports: scriptExports,
    options
  };
}
const __vue2_script = {};
const __cssModules = {};
var __component__ = /* @__PURE__ */ normalizeComponent(__vue2_script, render, staticRenderFns, false, __vue2_injectStyles, null, null, null);
function __vue2_injectStyles(context) {
  for (let o in __cssModules) {
    this[o] = __cssModules[o];
  }
}
__component__.options.__file = \\"fixtures/components/external.vue\\";
__component__.fluent = __component__.fluent || {};
__component__.fluent[\\"en\\"] = en_ftl;
__component__.fluent[\\"da\\"] = da_ftl;
"
`;

exports[`external ftl file support mode:development > works with vue 3 1`] = `
"

const _missingExportShim = void 0;
const da_ftl = new _missingExportShim(\\"\\");
const en_ftl = new _missingExportShim(\\"# Simple things are simple.\\\\nhello-user = Hello, {$userName}!\\\\n\\\\n# Complex things are possible.\\\\nshared-photos =\\\\n  {$userName} {$photoCount ->\\\\n     [one] added one photo\\\\n    *[other] added {$photoCount} new photos\\\\n  } to {$userGender ->\\\\n     [male] his stream\\\\n     [female] her stream\\\\n    *[other] their stream\\\\n  }.\\\\n\\");
const _sfc_main = {};
_sfc_main.fluent = _sfc_main.fluent || {};
_sfc_main.fluent[\\"en\\"] = en_ftl;
_sfc_main.fluent[\\"da\\"] = da_ftl;
"
`;

exports[`external ftl file support mode:development > works with vue 3 script setup 1`] = `
"

const _missingExportShim = void 0;
const en_ftl = new _missingExportShim(\\"# Simple things are simple.\\\\nhello-user = Hello, {$userName}!\\\\n\\\\n# Complex things are possible.\\\\nshared-photos =\\\\n  {$userName} {$photoCount ->\\\\n     [one] added one photo\\\\n    *[other] added {$photoCount} new photos\\\\n  } to {$userGender ->\\\\n     [male] his stream\\\\n     [female] her stream\\\\n    *[other] their stream\\\\n  }.\\\\n\\");
const _sfc_main = {
  setup(__props) {
    return (_ctx, _cache) => {
      return _missingExportShim(), _missingExportShim(\\"div\\", null, [
        _missingExportShim(\\"div\\", null, _missingExportShim(_ctx.$t(\\"hello-user\\", { userName: _ctx.userName })), 1),
        _missingExportShim(\\"div\\", null, _missingExportShim(_ctx.$t(\\"shared-photos\\", { userName: _ctx.userName, photoCount: _ctx.photoCount, userGender: _ctx.userGender })), 1)
      ]);
    };
  }
};
_sfc_main.fluent = _sfc_main.fluent || {};
_sfc_main.fluent[\\"en\\"] = en_ftl;
"
`;

exports[`external ftl file support mode:production > works with vue 2 1`] = `
"

const _missingExportShim = void 0;
const da_ftl = new _missingExportShim(\\"\\");
const en_ftl = new _missingExportShim(\\"# Simple things are simple.\\\\nhello-user = Hello, {$userName}!\\\\n\\\\n# Complex things are possible.\\\\nshared-photos =\\\\n  {$userName} {$photoCount ->\\\\n     [one] added one photo\\\\n    *[other] added {$photoCount} new photos\\\\n  } to {$userGender ->\\\\n     [male] his stream\\\\n     [female] her stream\\\\n    *[other] their stream\\\\n  }.\\\\n\\");
var render = function() {
  var _vm = this;
  var _h = _vm.$createElement;
  var _c = _vm._self._c || _h;
  return _c(\\"div\\", [_c(\\"div\\", [_vm._v(_vm._s(_vm.$t(\\"hello-user\\", {
    userName: _vm.userName
  })))]), _c(\\"div\\", [_vm._v(_vm._s(_vm.$t(\\"shared-photos\\", {
    userName: _vm.userName,
    photoCount: _vm.photoCount,
    userGender: _vm.userGender
  })))])]);
};
var staticRenderFns = [];
function normalizeComponent(scriptExports, render2, staticRenderFns2, functionalTemplate, injectStyles, scopeId, moduleIdentifier, shadowMode) {
  var options = typeof scriptExports === \\"function\\" ? scriptExports.options : scriptExports;
  if (render2) {
    options.render = render2;
    options.staticRenderFns = staticRenderFns2;
    options._compiled = true;
  }
  if (functionalTemplate) {
    options.functional = true;
  }
  if (scopeId) {
    options._scopeId = \\"data-v-\\" + scopeId;
  }
  var hook;
  if (moduleIdentifier) {
    hook = function(context) {
      context = context || this.$vnode && this.$vnode.ssrContext || this.parent && this.parent.$vnode && this.parent.$vnode.ssrContext;
      if (!context && typeof __VUE_SSR_CONTEXT__ !== \\"undefined\\") {
        context = __VUE_SSR_CONTEXT__;
      }
      if (injectStyles) {
        injectStyles.call(this, context);
      }
      if (context && context._registeredComponents) {
        context._registeredComponents.add(moduleIdentifier);
      }
    };
    options._ssrRegister = hook;
  } else if (injectStyles) {
    hook = shadowMode ? function() {
      injectStyles.call(this, (options.functional ? this.parent : this).$root.$options.shadowRoot);
    } : injectStyles;
  }
  if (hook) {
    if (options.functional) {
      options._injectStyles = hook;
      var originalRender = options.render;
      options.render = function renderWithStyleInjection(h, context) {
        hook.call(context);
        return originalRender(h, context);
      };
    } else {
      var existing = options.beforeCreate;
      options.beforeCreate = existing ? [].concat(existing, hook) : [hook];
    }
  }
  return {
    exports: scriptExports,
    options
  };
}
const __vue2_script = {};
const __cssModules = {};
var __component__ = /* @__PURE__ */ normalizeComponent(__vue2_script, render, staticRenderFns, false, __vue2_injectStyles, null, null, null);
function __vue2_injectStyles(context) {
  for (let o in __cssModules) {
    this[o] = __cssModules[o];
  }
}
__component__.fluent = __component__.fluent || {};
__component__.fluent[\\"en\\"] = en_ftl;
__component__.fluent[\\"da\\"] = da_ftl;
"
`;

exports[`external ftl file support mode:production > works with vue 3 1`] = `
"

const _missingExportShim = void 0;
const da_ftl = new _missingExportShim(\\"\\");
const en_ftl = new _missingExportShim(\\"# Simple things are simple.\\\\nhello-user = Hello, {$userName}!\\\\n\\\\n# Complex things are possible.\\\\nshared-photos =\\\\n  {$userName} {$photoCount ->\\\\n     [one] added one photo\\\\n    *[other] added {$photoCount} new photos\\\\n  } to {$userGender ->\\\\n     [male] his stream\\\\n     [female] her stream\\\\n    *[other] their stream\\\\n  }.\\\\n\\");
const _sfc_main = {};
_sfc_main.fluent = _sfc_main.fluent || {};
_sfc_main.fluent[\\"en\\"] = en_ftl;
_sfc_main.fluent[\\"da\\"] = da_ftl;
"
`;

exports[`external ftl file support mode:production > works with vue 3 script setup 1`] = `
"

const _missingExportShim = void 0;
const en_ftl = new _missingExportShim(\\"# Simple things are simple.\\\\nhello-user = Hello, {$userName}!\\\\n\\\\n# Complex things are possible.\\\\nshared-photos =\\\\n  {$userName} {$photoCount ->\\\\n     [one] added one photo\\\\n    *[other] added {$photoCount} new photos\\\\n  } to {$userGender ->\\\\n     [male] his stream\\\\n     [female] her stream\\\\n    *[other] their stream\\\\n  }.\\\\n\\");
const _sfc_main = {
  setup(__props) {
    return (_ctx, _cache) => {
      return _missingExportShim(), _missingExportShim(\\"div\\", null, [
        _missingExportShim(\\"div\\", null, _missingExportShim(_ctx.$t(\\"hello-user\\", { userName: _ctx.userName })), 1),
        _missingExportShim(\\"div\\", null, _missingExportShim(_ctx.$t(\\"shared-photos\\", { userName: _ctx.userName, photoCount: _ctx.photoCount, userGender: _ctx.userGender })), 1)
      ]);
    };
  }
};
_sfc_main.fluent = _sfc_main.fluent || {};
_sfc_main.fluent[\\"en\\"] = en_ftl;
"
`;
